added docstrings for the cleaner functions

--- a/topic_modelling/topic_model.ipynb
+++ b/topic_modelling/topic_model.ipynb
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "95118db5-8358-46db-ad38-90a67f6550a3",
    "metadata": {},
    "outputs": [],
@@ -309,19 +309,39 @@
     "def remove_stopwords(text: str, sw: List[str] = stopwords) -> str:\n",
     "    '''\n",
     "    This function will remove stopwords from the text\n",
+    "    \n",
+    "    Args:\n",
+    "        text: String of data you want to remove stopwords from\n",
+    "        sw: List of strings indicating the list of stopwords\n",
+    "        \n",
+    "    Returns:\n",
+    "        The input string with the stopwords removed.\n",
     "    '''\n",
     "    return ' '.join([word for word in text.split() if word not in stopwords.words('english')])\n",
     "    \n",
-    "def remove_punctuation(text: str) -> str:\n",
+    "def remove_punctuation(text: str, punct: str = string.punctuation) -> str:\n",
     "    '''\n",
-    "    This function will remove punctuations from the text\n",
+    "    This function will remove punctuations from the text.\n",
+    "    \n",
+    "    Args:\n",
+    "        text: String of data you want to remove punctuations from\n",
+    "        punct: String of punctuations\n",
+    "    \n",
+    "    Returns:\n",
+    "        The input string with the punctuations removed.\n",
     "    '''\n",
-    "    cleaned_text = ''.join([char for char in text if char not in string.punctuation])\n",
+    "    cleaned_text = ''.join([char for char in text if char not in punct])\n",
     "    return cleaned_text\n",
     "    \n",
     "def unicode(text: str) -> str:\n",
     "    '''\n",
-    "    This function will make all the data unicoded\n",
+    "    This function will make all the data unicoded. Meaning Â -> A\n",
+    "    \n",
+    "    Args:\n",
+    "        text: String of data you want to unicode\n",
+    "    \n",
+    "    Returns:\n",
+    "        The input string unicoded.\n",
     "    '''\n",
     "    return unidecode.unidecode(text)\n",
     "    \n",
@@ -339,12 +359,12 @@
     "    text = unicode(text)\n",
     "    text = remove_punctuation(text)\n",
     "    text = remove_stopwords(text)\n",
-    "    return text"
+    "    return text.lower()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "717eb255-71c3-4287-9175-ea652410148d",
    "metadata": {},
    "outputs": [
@@ -352,8 +372,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.84 s, sys: 732 ms, total: 4.57 s\n",
-      "Wall time: 4.58 s\n"
+      "CPU times: user 3.88 s, sys: 772 ms, total: 4.65 s\n",
+      "Wall time: 4.66 s\n"
      ]
     }
    ],
@@ -363,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "a47deda2-19b0-493a-afd5-8d5824149863",
    "metadata": {},
    "outputs": [
@@ -412,7 +432,7 @@
        "      <td>[cs.LG, cs.AI]</td>\n",
        "      <td>[Shuhei Watanabe, Noow Awad, Masaki Onishi, Fr...</td>\n",
        "      <td>2022</td>\n",
-       "      <td>Hyperparameter optimization HPO essential bett...</td>\n",
+       "      <td>hyperparameter optimization hpo essential bett...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -425,7 +445,7 @@
        "      <td>[cs.LG, cs.AI, cs.CV, cs.NE]</td>\n",
        "      <td>[Andrea Falanti, Eugenio Lomurno, Danilo Ardag...</td>\n",
        "      <td>2022</td>\n",
-       "      <td>The automated machine learning AutoML field be...</td>\n",
+       "      <td>the automated machine learning automl field be...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -438,7 +458,7 @@
        "      <td>[cs.LG, cs.AI]</td>\n",
        "      <td>[Xinle Wu, Dalin Zhang, Miao Zhang, Chenjuan G...</td>\n",
        "      <td>2022</td>\n",
-       "      <td>PhysicsInformed Neural Networks PINNs recently...</td>\n",
+       "      <td>physicsinformed neural networks pinns recently...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -451,7 +471,7 @@
        "      <td>[cs.LG]</td>\n",
        "      <td>[Pedro Henrique Ribeiro, Patryk Orzechowski, J...</td>\n",
        "      <td>2022</td>\n",
-       "      <td>Automated machine learning AutoML algorithms g...</td>\n",
+       "      <td>automated machine learning automl algorithms g...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -464,7 +484,7 @@
        "      <td>[cs.CV, cs.AI, cs.LG]</td>\n",
        "      <td>[Xin He, Jiangchao Yao, Yuxin Wang, Zhenheng T...</td>\n",
        "      <td>2022</td>\n",
-       "      <td>Oneshot neural architecture search NAS substan...</td>\n",
+       "      <td>oneshot neural architecture search nas substan...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -507,14 +527,14 @@
        "4  [Xin He, Jiangchao Yao, Yuxin Wang, Zhenheng T...  2022   \n",
        "\n",
        "                                     cleaned_summary  \n",
-       "0  Hyperparameter optimization HPO essential bett...  \n",
-       "1  The automated machine learning AutoML field be...  \n",
-       "2  PhysicsInformed Neural Networks PINNs recently...  \n",
-       "3  Automated machine learning AutoML algorithms g...  \n",
-       "4  Oneshot neural architecture search NAS substan...  "
+       "0  hyperparameter optimization hpo essential bett...  \n",
+       "1  the automated machine learning automl field be...  \n",
+       "2  physicsinformed neural networks pinns recently...  \n",
+       "3  automated machine learning automl algorithms g...  \n",
+       "4  oneshot neural architecture search nas substan...  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,8 +548,16 @@
    "id": "dffad1e0-9a4d-49b1-b4bb-6c3cf9a64d0e",
    "metadata": {},
    "source": [
-    "# Unsupervised Learning - Topic Modelling"
+    "# Unsupervised Learning - LDA"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37bdbc25-6cc5-4acb-9f4d-125e0c805c5f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -568,7 +596,7 @@
    "id": "a22604b1-0948-4a5c-9159-f140e60580ed",
    "metadata": {},
    "source": [
-    "# Supervised Learning - Topic Modelling"
+    "# Supervised Learning - Binary Classification"
    ]
   },
   {
@@ -599,6 +627,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "afbd9920-64df-400a-b73b-4afda59893e0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dba1bdc9-80a3-4d4d-b6ef-0427c956b763",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec2a46b3-6781-497a-a8f9-6daa28f06827",
+   "metadata": {},
+   "source": [
+    "# Supervised Learning - Multi-Class Classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "753a2a44-065d-4777-928b-103c726b913e",
    "metadata": {},
    "outputs": [],
    "source": []
