added code for lda model

--- a/topic_modelling/topic_model.ipynb
+++ b/topic_modelling/topic_model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "6af3e56d-77d1-40ac-bdcc-538c21abf43f",
    "metadata": {},
    "outputs": [],
@@ -553,8 +553,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "37bdbc25-6cc5-4acb-9f4d-125e0c805c5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "from gensim import models, corpora"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "2ae6004d-a466-4409-83b4-d00522bec283",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "article_summaries = research_df['cleaned_summary'].values\n",
+    "article_summaries = [[word for word in nltk.word_tokenize(article)] for article in article_summaries]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "050c6c29-7816-4899-9c17-bff976c525d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a dictionary of all the words in the dataset\n",
+    "dictionary = corpora.Dictionary(article_summaries)\n",
+    "\n",
+    "# Create a corpus\n",
+    "corpus = [dictionary.doc2bow(article) for article in article_summaries]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "2f01a879-54ba-4141-88ab-1c97c6d261e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 4.69 s, sys: 45.2 ms, total: 4.74 s\n",
+      "Wall time: 4.75 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Create an LDA model\n",
+    "lda = models.LdaModel(corpus, num_topics=10, id2word=dictionary, passes=20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "9f41f910-8aba-4813-9223-55ecfdd6fef6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Article 1: [(6, 0.54790044), (8, 0.44401333)]\n",
+      "Article 2: [(4, 0.26697603), (6, 0.65080774), (7, 0.07738426)]\n",
+      "Article 3: [(0, 0.4645687), (6, 0.39220694), (7, 0.13915145)]\n",
+      "Article 4: [(6, 0.9916613)]\n",
+      "Article 5: [(4, 0.87794346), (6, 0.11565114)]\n",
+      "Article 6: [(6, 0.39041102), (7, 0.6014999)]\n",
+      "Article 7: [(0, 0.5545885), (1, 0.035100326), (6, 0.40523368)]\n",
+      "Article 8: [(0, 0.15213814), (6, 0.8432332)]\n",
+      "Article 9: [(0, 0.3477852), (6, 0.64428633)]\n",
+      "Article 10: [(6, 0.42433938), (7, 0.56949884)]\n",
+      "[(0, '0.013*\"data\" + 0.010*\"the\" + 0.008*\"model\" + 0.008*\"we\" + 0.007*\"in\" + 0.005*\"systems\" + 0.004*\"results\" + 0.004*\"two\" + 0.004*\"using\" + 0.004*\"models\"'), (1, '0.010*\"data\" + 0.006*\"we\" + 0.006*\"work\" + 0.005*\"time\" + 0.005*\"in\" + 0.005*\"the\" + 0.005*\"results\" + 0.004*\"analysis\" + 0.004*\"users\" + 0.004*\"business\"'), (2, '0.010*\"we\" + 0.009*\"systems\" + 0.006*\"transmission\" + 0.006*\"the\" + 0.004*\"networks\" + 0.004*\"study\" + 0.003*\"neural\" + 0.003*\"data\" + 0.003*\"coherent\" + 0.003*\"system\"'), (3, '0.007*\"we\" + 0.007*\"the\" + 0.006*\"models\" + 0.005*\"this\" + 0.005*\"model\" + 0.004*\"in\" + 0.004*\"energy\" + 0.004*\"states\" + 0.003*\"quantum\" + 0.003*\"motion\"'), (4, '0.012*\"models\" + 0.010*\"model\" + 0.008*\"data\" + 0.008*\"we\" + 0.007*\"language\" + 0.007*\"performance\" + 0.007*\"tasks\" + 0.006*\"method\" + 0.006*\"the\" + 0.005*\"methods\"'), (5, '0.014*\"we\" + 0.008*\"the\" + 0.007*\"quantum\" + 0.006*\"in\" + 0.005*\"model\" + 0.005*\"system\" + 0.004*\"study\" + 0.004*\"time\" + 0.004*\"systems\" + 0.004*\"show\"'), (6, '0.013*\"automl\" + 0.011*\"learning\" + 0.009*\"we\" + 0.009*\"data\" + 0.007*\"models\" + 0.007*\"model\" + 0.006*\"machine\" + 0.006*\"tasks\" + 0.006*\"the\" + 0.005*\"performance\"'), (7, '0.013*\"data\" + 0.012*\"learning\" + 0.006*\"image\" + 0.006*\"the\" + 0.006*\"time\" + 0.006*\"neural\" + 0.006*\"deep\" + 0.006*\"we\" + 0.006*\"in\" + 0.005*\"training\"'), (8, '0.009*\"learning\" + 0.007*\"in\" + 0.006*\"we\" + 0.005*\"matching\" + 0.004*\"reinforcement\" + 0.004*\"induced\" + 0.004*\"our\" + 0.004*\"also\" + 0.004*\"method\" + 0.003*\"rl\"'), (9, '0.010*\"we\" + 0.007*\"in\" + 0.006*\"the\" + 0.004*\"problem\" + 0.004*\"data\" + 0.003*\"language\" + 0.003*\"models\" + 0.003*\"also\" + 0.003*\"systems\" + 0.003*\"energy\"')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the topic distribution for each document\n",
+    "for i, article in enumerate(article_summaries[0:10]):\n",
+    "    print(f\"Article {i+1}: {lda.get_document_topics(corpus[i])}\")\n",
+    "\n",
+    "# Print the top words for each topic\n",
+    "print(lda.print_topics())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c6ab224-5e40-4ef3-aef9-392c95cfbb73",
    "metadata": {},
    "outputs": [],
    "source": []
