adding visualizations to lda topic model

--- a/topic_modelling/topic_model.ipynb
+++ b/topic_modelling/topic_model.ipynb
@@ -643,8 +643,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "id": "f6a96593-65bd-4b8c-bb02-b792967923b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pyLDAvis'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [47], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpyLDAvis\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgensim\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pyLDAvis'"
+     ]
+    }
+   ],
+   "source": [
+    "import pyLDAvis.gensim\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "7757ddbd-1ea9-43a2-9acc-5516e22bdba4",
+   "id": "64c2d2c4-9599-4526-931c-7d620b7e678f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lda.id2word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b4484e9-88d3-40af-b23b-039094483a4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "body_vis = pyLDAvis.gensim.prepare(body_lda_model_25, body_corpus_25, dictionary=body_lda_model_25.id2word,mds='mmds',sort_topics=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b7125fa-d139-4cdc-9e01-e2b13a7b356b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -660,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8115626-2e15-4348-b283-94ec8d1afd5e",
+   "id": "b1b1b468-996c-43d1-a209-ed190b465b72",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -684,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7021f1c7-be7e-4082-a8e7-c825922cfd13",
+   "id": "9478edf1-f0a5-48ca-a192-a5f0d0148515",
    "metadata": {},
    "outputs": [],
    "source": []
