--- a/topic_modelling/topic_model.ipynb
+++ b/topic_modelling/topic_model.ipynb
@@ -642,20 +642,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "92dc3b14-bf4c-4636-a72a-8f4cd4335a3c",
+   "metadata": {},
+   "source": [
+    "## Visualization"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 52,
+   "id": "78951756-83b1-4196-b388-7912f8b6da0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'gensim' from 'pyLDAvis' (/Users/vatsalpatel/opt/miniconda3/envs/test_env/lib/python3.10/site-packages/pyLDAvis/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [52], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpyLDAvis\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m gensim\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'gensim' from 'pyLDAvis' (/Users/vatsalpatel/opt/miniconda3/envs/test_env/lib/python3.10/site-packages/pyLDAvis/__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "from pyLDAvis import gensim\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "id": "f6a96593-65bd-4b8c-bb02-b792967923b3",
    "metadata": {},
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pyLDAvis'",
+     "evalue": "No module named 'pyLDAvis.gensim'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [47], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpyLDAvis\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgensim\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pyLDAvis'"
+      "Cell \u001b[0;32mIn [51], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpyLDAvis\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mgensim\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pyLDAvis.gensim'"
      ]
     }
    ],
@@ -684,25 +714,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "874e4452-9f39-448f-8f07-767fd0951cbe",
+   "metadata": {},
+   "source": [
+    "## Topic Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b7125fa-d139-4cdc-9e01-e2b13a7b356b",
+   "id": "d7976dfa-92eb-4295-be69-7b3b7711a555",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3195860-23f1-4434-897b-3dbcb7b34897",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ceb86fd1-5968-466a-bb71-08b1a8419857",
+   "id": "de1176bc-e340-4eba-af4f-76e2703b759e",
    "metadata": {},
    "source": [
-    "## Evaluation"
+    "## Word Cloud"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1b1b468-996c-43d1-a209-ed190b465b72",
+   "id": "e60e631f-88d5-441d-8c2a-719ec7916896",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -710,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba73e197-2cd0-405d-8891-0f02847f43a7",
+   "id": "6b7125fa-d139-4cdc-9e01-e2b13a7b356b",
    "metadata": {},
    "outputs": [],
    "source": []
