created df for topic per article

--- a/topic_modelling/topic_model.ipynb
+++ b/topic_modelling/topic_model.ipynb
@@ -651,6 +651,162 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 54,
+   "id": "0e3b4a5e-2437-4cbc-8269-1464d642f111",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an empty dataframe\n",
+    "df = pd.DataFrame(columns=[\"article\", \"topic\", \"probability\"])\n",
+    "\n",
+    "# Loop over the articles and get the top 15 topics for each one\n",
+    "for i, article in enumerate(article_summaries):\n",
+    "    topics = lda.get_document_topics(corpus[i])\n",
+    "    topics = sorted(topics, key=lambda x: x[1], reverse=True)[:15]\n",
+    "    for topic in topics:\n",
+    "        df = df.append({\"article\": i, \"topic\": topic[0], \"probability\": topic[1]}, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "593d7794-4892-4c41-bdd2-3b30de67da55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>article</th>\n",
+       "      <th>topic</th>\n",
+       "      <th>probability</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.547899</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.444015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.650804</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.266983</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.077380</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>912</th>\n",
+       "      <td>644.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.033557</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>913</th>\n",
+       "      <td>645.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.994036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>914</th>\n",
+       "      <td>646.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.496334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>915</th>\n",
+       "      <td>646.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.351349</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>916</th>\n",
+       "      <td>646.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.145380</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>917 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     article  topic  probability\n",
+       "0        0.0    6.0     0.547899\n",
+       "1        0.0    8.0     0.444015\n",
+       "2        1.0    6.0     0.650804\n",
+       "3        1.0    4.0     0.266983\n",
+       "4        1.0    7.0     0.077380\n",
+       "..       ...    ...          ...\n",
+       "912    644.0    6.0     0.033557\n",
+       "913    645.0    3.0     0.994036\n",
+       "914    646.0    3.0     0.496334\n",
+       "915    646.0    4.0     0.351349\n",
+       "916    646.0    6.0     0.145380\n",
+       "\n",
+       "[917 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5880fa8b-36fc-4c04-9882-e305b4147b84",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 52,
    "id": "78951756-83b1-4196-b388-7912f8b6da0f",
    "metadata": {},
