mapping the topic ids to names

--- a/topic_modelling/topic_model.ipynb
+++ b/topic_modelling/topic_model.ipynb
@@ -799,8 +799,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "5880fa8b-36fc-4c04-9882-e305b4147b84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, '0.013*\"data\" + 0.010*\"the\" + 0.008*\"model\" + 0.008*\"we\" + 0.007*\"in\"')\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 2, got 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [57], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(topic)\n\u001b[1;32m      8\u001b[0m topic_num \u001b[38;5;241m=\u001b[39m topic[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m----> 9\u001b[0m topic_words \u001b[38;5;241m=\u001b[39m [word \u001b[38;5;28;01mfor\u001b[39;00m word, _ \u001b[38;5;129;01min\u001b[39;00m topic[\u001b[38;5;241m1\u001b[39m]]\n\u001b[1;32m     10\u001b[0m topic_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(topic_words)\n\u001b[1;32m     11\u001b[0m topic_names[topic_num] \u001b[38;5;241m=\u001b[39m topic_name\n",
+      "Cell \u001b[0;32mIn [57], line 9\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(topic)\n\u001b[1;32m      8\u001b[0m topic_num \u001b[38;5;241m=\u001b[39m topic[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m----> 9\u001b[0m topic_words \u001b[38;5;241m=\u001b[39m [word \u001b[38;5;28;01mfor\u001b[39;00m word, _ \u001b[38;5;129;01min\u001b[39;00m topic[\u001b[38;5;241m1\u001b[39m]]\n\u001b[1;32m     10\u001b[0m topic_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(topic_words)\n\u001b[1;32m     11\u001b[0m topic_names[topic_num] \u001b[38;5;241m=\u001b[39m topic_name\n",
+      "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 1)"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the list of top words for each topic\n",
+    "topics = lda.print_topics(num_words=5)\n",
+    "\n",
+    "# Create a dictionary that maps the topic numbers to the topic names\n",
+    "topic_names = {}\n",
+    "for topic in topics:\n",
+    "    print(topic)\n",
+    "    topic_num = topic[0]\n",
+    "    topic_words = [word for word, _ in topic[1]]\n",
+    "    topic_name = \" \".join(topic_words)\n",
+    "    topic_names[topic_num] = topic_name\n",
+    "\n",
+    "# Add a new column to the dataframe with the topic names\n",
+    "df[\"topic_name\"] = df[\"topic\"].map(topic_names)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70c86bcd-3431-462d-bc8f-189226fa0692",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65a4950b-f171-4fe9-92ff-e956f39d0bef",
    "metadata": {},
    "outputs": [],
    "source": []
