--- a/topic_modelling/topic_model.ipynb
+++ b/topic_modelling/topic_model.ipynb
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 72,
    "id": "5880fa8b-36fc-4c04-9882-e305b4147b84",
    "metadata": {},
    "outputs": [
@@ -807,19 +807,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, '0.013*\"data\" + 0.010*\"the\" + 0.008*\"model\" + 0.008*\"we\" + 0.007*\"in\"')\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "not enough values to unpack (expected 2, got 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [57], line 9\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(topic)\n\u001b[1;32m      8\u001b[0m topic_num \u001b[38;5;241m=\u001b[39m topic[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m----> 9\u001b[0m topic_words \u001b[38;5;241m=\u001b[39m [word \u001b[38;5;28;01mfor\u001b[39;00m word, _ \u001b[38;5;129;01min\u001b[39;00m topic[\u001b[38;5;241m1\u001b[39m]]\n\u001b[1;32m     10\u001b[0m topic_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(topic_words)\n\u001b[1;32m     11\u001b[0m topic_names[topic_num] \u001b[38;5;241m=\u001b[39m topic_name\n",
-      "Cell \u001b[0;32mIn [57], line 9\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(topic)\n\u001b[1;32m      8\u001b[0m topic_num \u001b[38;5;241m=\u001b[39m topic[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m----> 9\u001b[0m topic_words \u001b[38;5;241m=\u001b[39m [word \u001b[38;5;28;01mfor\u001b[39;00m word, _ \u001b[38;5;129;01min\u001b[39;00m topic[\u001b[38;5;241m1\u001b[39m]]\n\u001b[1;32m     10\u001b[0m topic_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(topic_words)\n\u001b[1;32m     11\u001b[0m topic_names[topic_num] \u001b[38;5;241m=\u001b[39m topic_name\n",
-      "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 1)"
+      "['0.013*\"data\" ', ' 0.010*\"the\" ', ' 0.008*\"model\" ', ' 0.008*\"we\" ', ' 0.007*\"in\"']\n",
+      "['0.010*\"data\" ', ' 0.006*\"we\" ', ' 0.006*\"work\" ', ' 0.005*\"time\" ', ' 0.005*\"in\"']\n",
+      "['0.010*\"we\" ', ' 0.009*\"systems\" ', ' 0.006*\"transmission\" ', ' 0.006*\"the\" ', ' 0.004*\"networks\"']\n",
+      "['0.007*\"we\" ', ' 0.007*\"the\" ', ' 0.006*\"models\" ', ' 0.005*\"this\" ', ' 0.005*\"model\"']\n",
+      "['0.012*\"models\" ', ' 0.010*\"model\" ', ' 0.008*\"data\" ', ' 0.008*\"we\" ', ' 0.007*\"language\"']\n",
+      "['0.014*\"we\" ', ' 0.008*\"the\" ', ' 0.007*\"quantum\" ', ' 0.006*\"in\" ', ' 0.005*\"model\"']\n",
+      "['0.013*\"automl\" ', ' 0.011*\"learning\" ', ' 0.009*\"we\" ', ' 0.009*\"data\" ', ' 0.007*\"models\"']\n",
+      "['0.013*\"data\" ', ' 0.012*\"learning\" ', ' 0.006*\"image\" ', ' 0.006*\"the\" ', ' 0.006*\"time\"']\n",
+      "['0.009*\"learning\" ', ' 0.007*\"in\" ', ' 0.006*\"we\" ', ' 0.005*\"matching\" ', ' 0.004*\"reinforcement\"']\n",
+      "['0.010*\"we\" ', ' 0.007*\"in\" ', ' 0.006*\"the\" ', ' 0.004*\"problem\" ', ' 0.004*\"data\"']\n"
      ]
     }
    ],
@@ -830,9 +827,10 @@
     "# Create a dictionary that maps the topic numbers to the topic names\n",
     "topic_names = {}\n",
     "for topic in topics:\n",
-    "    print(topic)\n",
     "    topic_num = topic[0]\n",
-    "    topic_words = [word for word, _ in topic[1]]\n",
+    "    split_w = [w for w in topic[1].split('+')]\n",
+    "    \n",
+    "    topic_words = [word for word in topic[1]]\n",
     "    topic_name = \" \".join(topic_words)\n",
     "    topic_names[topic_num] = topic_name\n",
     "\n",
@@ -842,11 +840,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "70c86bcd-3431-462d-bc8f-189226fa0692",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>article</th>\n",
+       "      <th>topic</th>\n",
+       "      <th>probability</th>\n",
+       "      <th>topic_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.547899</td>\n",
+       "      <td>0 . 0 1 3 * \" a u t o m l \"   +   0 . 0 1 1 * ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.444015</td>\n",
+       "      <td>0 . 0 0 9 * \" l e a r n i n g \"   +   0 . 0 0 ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.650804</td>\n",
+       "      <td>0 . 0 1 3 * \" a u t o m l \"   +   0 . 0 1 1 * ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.266983</td>\n",
+       "      <td>0 . 0 1 2 * \" m o d e l s \"   +   0 . 0 1 0 * ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.077380</td>\n",
+       "      <td>0 . 0 1 3 * \" d a t a \"   +   0 . 0 1 2 * \" l ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>912</th>\n",
+       "      <td>644.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.033557</td>\n",
+       "      <td>0 . 0 1 3 * \" a u t o m l \"   +   0 . 0 1 1 * ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>913</th>\n",
+       "      <td>645.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.994036</td>\n",
+       "      <td>0 . 0 0 7 * \" w e \"   +   0 . 0 0 7 * \" t h e ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>914</th>\n",
+       "      <td>646.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.496334</td>\n",
+       "      <td>0 . 0 0 7 * \" w e \"   +   0 . 0 0 7 * \" t h e ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>915</th>\n",
+       "      <td>646.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.351349</td>\n",
+       "      <td>0 . 0 1 2 * \" m o d e l s \"   +   0 . 0 1 0 * ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>916</th>\n",
+       "      <td>646.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.145380</td>\n",
+       "      <td>0 . 0 1 3 * \" a u t o m l \"   +   0 . 0 1 1 * ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>917 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     article  topic  probability  \\\n",
+       "0        0.0    6.0     0.547899   \n",
+       "1        0.0    8.0     0.444015   \n",
+       "2        1.0    6.0     0.650804   \n",
+       "3        1.0    4.0     0.266983   \n",
+       "4        1.0    7.0     0.077380   \n",
+       "..       ...    ...          ...   \n",
+       "912    644.0    6.0     0.033557   \n",
+       "913    645.0    3.0     0.994036   \n",
+       "914    646.0    3.0     0.496334   \n",
+       "915    646.0    4.0     0.351349   \n",
+       "916    646.0    6.0     0.145380   \n",
+       "\n",
+       "                                            topic_name  \n",
+       "0    0 . 0 1 3 * \" a u t o m l \"   +   0 . 0 1 1 * ...  \n",
+       "1    0 . 0 0 9 * \" l e a r n i n g \"   +   0 . 0 0 ...  \n",
+       "2    0 . 0 1 3 * \" a u t o m l \"   +   0 . 0 1 1 * ...  \n",
+       "3    0 . 0 1 2 * \" m o d e l s \"   +   0 . 0 1 0 * ...  \n",
+       "4    0 . 0 1 3 * \" d a t a \"   +   0 . 0 1 2 * \" l ...  \n",
+       "..                                                 ...  \n",
+       "912  0 . 0 1 3 * \" a u t o m l \"   +   0 . 0 1 1 * ...  \n",
+       "913  0 . 0 0 7 * \" w e \"   +   0 . 0 0 7 * \" t h e ...  \n",
+       "914  0 . 0 0 7 * \" w e \"   +   0 . 0 0 7 * \" t h e ...  \n",
+       "915  0 . 0 1 2 * \" m o d e l s \"   +   0 . 0 1 0 * ...  \n",
+       "916  0 . 0 1 3 * \" a u t o m l \"   +   0 . 0 1 1 * ...  \n",
+       "\n",
+       "[917 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
   },
   {
    "cell_type": "code",
