--- a/topic_modelling/topic_model.ipynb
+++ b/topic_modelling/topic_model.ipynb
@@ -799,27 +799,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 82,
    "id": "5880fa8b-36fc-4c04-9882-e305b4147b84",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['0.013*\"data\" ', ' 0.010*\"the\" ', ' 0.008*\"model\" ', ' 0.008*\"we\" ', ' 0.007*\"in\"']\n",
-      "['0.010*\"data\" ', ' 0.006*\"we\" ', ' 0.006*\"work\" ', ' 0.005*\"time\" ', ' 0.005*\"in\"']\n",
-      "['0.010*\"we\" ', ' 0.009*\"systems\" ', ' 0.006*\"transmission\" ', ' 0.006*\"the\" ', ' 0.004*\"networks\"']\n",
-      "['0.007*\"we\" ', ' 0.007*\"the\" ', ' 0.006*\"models\" ', ' 0.005*\"this\" ', ' 0.005*\"model\"']\n",
-      "['0.012*\"models\" ', ' 0.010*\"model\" ', ' 0.008*\"data\" ', ' 0.008*\"we\" ', ' 0.007*\"language\"']\n",
-      "['0.014*\"we\" ', ' 0.008*\"the\" ', ' 0.007*\"quantum\" ', ' 0.006*\"in\" ', ' 0.005*\"model\"']\n",
-      "['0.013*\"automl\" ', ' 0.011*\"learning\" ', ' 0.009*\"we\" ', ' 0.009*\"data\" ', ' 0.007*\"models\"']\n",
-      "['0.013*\"data\" ', ' 0.012*\"learning\" ', ' 0.006*\"image\" ', ' 0.006*\"the\" ', ' 0.006*\"time\"']\n",
-      "['0.009*\"learning\" ', ' 0.007*\"in\" ', ' 0.006*\"we\" ', ' 0.005*\"matching\" ', ' 0.004*\"reinforcement\"']\n",
-      "['0.010*\"we\" ', ' 0.007*\"in\" ', ' 0.006*\"the\" ', ' 0.004*\"problem\" ', ' 0.004*\"data\"']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get the list of top words for each topic\n",
     "topics = lda.print_topics(num_words=5)\n",
@@ -829,9 +812,8 @@
     "for topic in topics:\n",
     "    topic_num = topic[0]\n",
     "    split_w = [w for w in topic[1].split('+')]\n",
-    "    \n",
-    "    topic_words = [word for word in topic[1]]\n",
-    "    topic_name = \" \".join(topic_words)\n",
+    "    topic_words = [w.split('*')[1] for w in split_w]\n",
+    "    topic_name = \",\".join(topic_words)\n",
     "    topic_names[topic_num] = topic_name\n",
     "\n",
     "# Add a new column to the dataframe with the topic names\n",
@@ -840,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 83,
    "id": "70c86bcd-3431-462d-bc8f-189226fa0692",
    "metadata": {},
    "outputs": [
@@ -877,35 +859,35 @@
        "      <td>0.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>0.547899</td>\n",
-       "      <td>0 . 0 1 3 * \" a u t o m l \"   +   0 . 0 1 1 * ...</td>\n",
+       "      <td>\"automl\" ,\"learning\" ,\"we\" ,\"data\" ,\"models\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0.0</td>\n",
        "      <td>8.0</td>\n",
        "      <td>0.444015</td>\n",
-       "      <td>0 . 0 0 9 * \" l e a r n i n g \"   +   0 . 0 0 ...</td>\n",
+       "      <td>\"learning\" ,\"in\" ,\"we\" ,\"matching\" ,\"reinforce...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>0.650804</td>\n",
-       "      <td>0 . 0 1 3 * \" a u t o m l \"   +   0 . 0 1 1 * ...</td>\n",
+       "      <td>\"automl\" ,\"learning\" ,\"we\" ,\"data\" ,\"models\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>0.266983</td>\n",
-       "      <td>0 . 0 1 2 * \" m o d e l s \"   +   0 . 0 1 0 * ...</td>\n",
+       "      <td>\"models\" ,\"model\" ,\"data\" ,\"we\" ,\"language\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1.0</td>\n",
        "      <td>7.0</td>\n",
        "      <td>0.077380</td>\n",
-       "      <td>0 . 0 1 3 * \" d a t a \"   +   0 . 0 1 2 * \" l ...</td>\n",
+       "      <td>\"data\" ,\"learning\" ,\"image\" ,\"the\" ,\"time\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -919,35 +901,35 @@
        "      <td>644.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>0.033557</td>\n",
-       "      <td>0 . 0 1 3 * \" a u t o m l \"   +   0 . 0 1 1 * ...</td>\n",
+       "      <td>\"automl\" ,\"learning\" ,\"we\" ,\"data\" ,\"models\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>913</th>\n",
        "      <td>645.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>0.994036</td>\n",
-       "      <td>0 . 0 0 7 * \" w e \"   +   0 . 0 0 7 * \" t h e ...</td>\n",
+       "      <td>\"we\" ,\"the\" ,\"models\" ,\"this\" ,\"model\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>914</th>\n",
        "      <td>646.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>0.496334</td>\n",
-       "      <td>0 . 0 0 7 * \" w e \"   +   0 . 0 0 7 * \" t h e ...</td>\n",
+       "      <td>\"we\" ,\"the\" ,\"models\" ,\"this\" ,\"model\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>915</th>\n",
        "      <td>646.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>0.351349</td>\n",
-       "      <td>0 . 0 1 2 * \" m o d e l s \"   +   0 . 0 1 0 * ...</td>\n",
+       "      <td>\"models\" ,\"model\" ,\"data\" ,\"we\" ,\"language\"</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>916</th>\n",
        "      <td>646.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>0.145380</td>\n",
-       "      <td>0 . 0 1 3 * \" a u t o m l \"   +   0 . 0 1 1 * ...</td>\n",
+       "      <td>\"automl\" ,\"learning\" ,\"we\" ,\"data\" ,\"models\"</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -969,22 +951,22 @@
        "916    646.0    6.0     0.145380   \n",
        "\n",
        "                                            topic_name  \n",
-       "0    0 . 0 1 3 * \" a u t o m l \"   +   0 . 0 1 1 * ...  \n",
-       "1    0 . 0 0 9 * \" l e a r n i n g \"   +   0 . 0 0 ...  \n",
-       "2    0 . 0 1 3 * \" a u t o m l \"   +   0 . 0 1 1 * ...  \n",
-       "3    0 . 0 1 2 * \" m o d e l s \"   +   0 . 0 1 0 * ...  \n",
-       "4    0 . 0 1 3 * \" d a t a \"   +   0 . 0 1 2 * \" l ...  \n",
+       "0         \"automl\" ,\"learning\" ,\"we\" ,\"data\" ,\"models\"  \n",
+       "1    \"learning\" ,\"in\" ,\"we\" ,\"matching\" ,\"reinforce...  \n",
+       "2         \"automl\" ,\"learning\" ,\"we\" ,\"data\" ,\"models\"  \n",
+       "3          \"models\" ,\"model\" ,\"data\" ,\"we\" ,\"language\"  \n",
+       "4           \"data\" ,\"learning\" ,\"image\" ,\"the\" ,\"time\"  \n",
        "..                                                 ...  \n",
-       "912  0 . 0 1 3 * \" a u t o m l \"   +   0 . 0 1 1 * ...  \n",
-       "913  0 . 0 0 7 * \" w e \"   +   0 . 0 0 7 * \" t h e ...  \n",
-       "914  0 . 0 0 7 * \" w e \"   +   0 . 0 0 7 * \" t h e ...  \n",
-       "915  0 . 0 1 2 * \" m o d e l s \"   +   0 . 0 1 0 * ...  \n",
-       "916  0 . 0 1 3 * \" a u t o m l \"   +   0 . 0 1 1 * ...  \n",
+       "912       \"automl\" ,\"learning\" ,\"we\" ,\"data\" ,\"models\"  \n",
+       "913             \"we\" ,\"the\" ,\"models\" ,\"this\" ,\"model\"  \n",
+       "914             \"we\" ,\"the\" ,\"models\" ,\"this\" ,\"model\"  \n",
+       "915        \"models\" ,\"model\" ,\"data\" ,\"we\" ,\"language\"  \n",
+       "916       \"automl\" ,\"learning\" ,\"we\" ,\"data\" ,\"models\"  \n",
        "\n",
        "[917 rows x 4 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
