added segment for label generation

--- a/topic_modelling/topic_model.ipynb
+++ b/topic_modelling/topic_model.ipynb
@@ -1109,7 +1109,9 @@
    "id": "9478edf1-f0a5-48ca-a192-a5f0d0148515",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# generate labels"
+   ]
   },
   {
    "cell_type": "code",
