--- a/topic_modelling/topic_model.ipynb
+++ b/topic_modelling/topic_model.ipynb
@@ -1049,6 +1049,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eeff1ae2-9c04-4af8-abce-615180a95754",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Word Cloud"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e60e631f-88d5-441d-8c2a-719ec7916896",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b7125fa-d139-4cdc-9e01-e2b13a7b356b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "874e4452-9f39-448f-8f07-767fd0951cbe",
    "metadata": {},
    "source": [
@@ -1067,30 +1093,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b3195860-23f1-4434-897b-3dbcb7b34897",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "de1176bc-e340-4eba-af4f-76e2703b759e",
-   "metadata": {},
-   "source": [
-    "## Word Cloud"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e60e631f-88d5-441d-8c2a-719ec7916896",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b7125fa-d139-4cdc-9e01-e2b13a7b356b",
    "metadata": {},
    "outputs": [],
    "source": []
