--- a/topic_modelling/topic_model.ipynb
+++ b/topic_modelling/topic_model.ipynb
@@ -1521,7 +1521,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# generate labels"
+    "# generate labels for topics\n",
+    "# parse labels"
    ]
   },
   {
@@ -1530,7 +1531,9 @@
    "id": "9662ca63-b0ec-47a9-a733-d09d9f8381ec",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# use labelled data as validation set"
+   ]
   },
   {
    "cell_type": "markdown",
