added in initial imports

--- a/node_embeddings/compare_embeddings.ipynb
+++ b/node_embeddings/compare_embeddings.ipynb
@@ -10,11 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d9319949-83ef-40c9-acdc-caa6f9c23f0b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import networkx as nx"
+   ]
   },
   {
    "cell_type": "code",
